--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "Mido",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
