--- a/project.config.json
+++ b/project.config.json
@@ -33,12 +33,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "search",
-					"pathName": "pages/search/search"
+					"pathName": "pages/search/search",
+					"query": ""
 				}
 			]
 		}
