--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
     "pages/index/index",
     "pages/search/search",
     "pages/user/user",
-    "pages/index/detail/detail"
+    "pages/index/detail/detail",
+    "pages/index/more/more",
+    "pages/search/searchbar"
   ],
   "window": {
     "backgroundTextStyle": "light",
