--- a/project.config.json
+++ b/project.config.json
@@ -33,12 +33,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "search",
 					"pathName": "pages/search/search",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "searchbar",
+					"pathName": "pages/search/searchbar/searchbar",
 					"query": ""
 				}
 			]
