--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -50,7 +50,8 @@
 				{
 					"id": -1,
 					"name": "user",
-					"pathName": "pages/user/user"
+					"pathName": "pages/user/user",
+					"query": ""
 				}
 			]
 		}
